# video-use

./: .env.example  ARCHITECTURE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FORK_SUMMARY.md  GITHUB_SETUP.md  LICENSE  QUICK_START.md  README.md  SKILL.md  pyproject.toml
helpers/: test_transcribers.py  transcribe.py  transcribe_batch.py
helpers/transcribers/: README.md  __init__.py  assemblyai_backend.py  base.py  elevenlabs.py  faster_whisper_backend.py  faster_whisper_with_diarization.py  google_cloud_backend.py  whisper_backend.py  whisper_with_diarization.py
