[project]
name = "video-use"
version = "0.1.0"
description = "Conversation-driven video editor skill for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "librosa",
    "matplotlib",
    "pillow",
    "numpy",
]

[project.optional-dependencies]
animations = ["manim"]
transcribers-elevenlabs = ["requests"]
transcribers-whisper = ["openai-whisper"]
transcribers-faster = ["faster-whisper"]
transcribers-diarization = ["openai-whisper", "faster-whisper", "pyannote.audio"]
transcribers-google = ["google-cloud-speech"]
transcribers-assemblyai = ["assemblyai"]
transcribers-all = [
    "openai-whisper",
    "faster-whisper",
    "pyannote.audio",
    "google-cloud-speech",
    "assemblyai",
    "requests",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
